renamed html files

--- a/Chord-System-Demo.html
+++ b/Chord-System-Demo.html
@@ -90,7 +90,7 @@
   <script src="js/chord-system-bundle.js"></script>
 
   <script>
-    // Initialize the chord selector
+    // Initialize the chord selector, for later use
     const chordSelector = ChordSystem.init('#chord-selector');
 
     // Create a standalone keyboard
