--- a/chord-system-bundle.html
+++ b/chord-system-bundle.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Chord System Bundle js</title>
 </head>
 <body>
 
