tab 1 name change

--- a/tonika_bundle.html
+++ b/tonika_bundle.html
@@ -13,7 +13,7 @@
 
 <!-- Tabs -->
 <div class="tabs">
-    <button class="active" onclick="openTab(0)">Tab 1</button>
+    <button class="active" onclick="openTab(0)">Chord Selection</button>
     <button onclick="openTab(1)">Tab 2</button>
     <button onclick="openTab(2)">Tab 3</button>
     <button onclick="openTab(3)">Tab 4</button>
