--- a/chordonika-bundle.html
+++ b/chordonika-bundle.html
@@ -12,7 +12,7 @@
 </div>
 
 <!-- Include the chord system bundle -->
-<script src="js/chord-system-bundle.js"></script>
+<script src="js/chordonika-bundle.js"></script>
 
 <script>
     // Initialize the chord selector
