--- a/tonika_bundle.html
+++ b/tonika_bundle.html
@@ -55,7 +55,7 @@
 </script>
 
 <!-- Include the chord system bundle -->
-<script src="js/chord-system-bundle.js"></script>
+<script src="js/chordonika-bundle.js"></script>
 <!-- Include the bundled file -->
 <script src="js/bundled-clavonika.js"></script>
 
