added catchonika, changed tab order

--- a/tonika_bundle.html
+++ b/tonika_bundle.html
@@ -13,8 +13,8 @@
 
 <!-- Tabs -->
 <div class="tabs">
-    <button class="active" onclick="openTab(0)">Chord Selection</button>
-    <button onclick="openTab(1)">Tab 2</button>
+    <button class="active" onclick="openTab(0)">Catchonika</button>
+    <button onclick="openTab(1)">Chord Selection</button>
     <button onclick="openTab(2)">Tab 3</button>
     <button onclick="openTab(3)">Tab 4</button>
     <button onclick="openTab(4)">Tab 5</button>
@@ -22,10 +22,10 @@
 </div>
 
 <div class="tab-content">
-    <section class="active">
+    <section class="active">catchonika here</section>
+    <section>
         <div id="chord-selector"></div>
     </section>
-    <section>Content for Tab 2</section>
     <section>Content for Tab 3</section>
     <section>Content for Tab 4</section>
     <section>Content for Tab 5</section>
