tonika css project

--- a/tonika_bundle.html
+++ b/tonika_bundle.html
@@ -24,7 +24,7 @@
 <!-- Tabs -->
 <div class="tabs">
     <button class="active" onclick="openTab(0)">Catchonika</button>
-    <button onclick="openTab(1)">Chord Selection</button>
+    <button onclick="openTab(1)">Chordonika</button>
     <button onclick="openTab(2)">Tab 3</button>
     <button onclick="openTab(3)">Tab 4</button>
     <button onclick="openTab(4)">Tab 5</button>
