--- a/tonika_bundle.html
+++ b/tonika_bundle.html
@@ -15,7 +15,8 @@
 
     <!-- 4) MODULE STYLES -->
     <link rel="stylesheet" href="css/chordonika.css" />
-    <!-- (Catchonika and others can load their own CSS if needed) -->
+    <link rel="stylesheet" href="css/catchonika.css" />
+    <link rel="stylesheet" href="css/clavonika.css" />
 </head>
 
 <body class="tonika-theme-dark">
@@ -82,7 +83,7 @@
 
 <!-- ===== Scripts: order matters ===== -->
 <!-- Core modules -->
-<script src="js/bundled-clavonika.js"></script>
+<script src="js/clavonika.js"></script>
 <script src="js/jackonika.js"></script>
 
 <!-- Vendor for Catchonika -->
